--- a/.github/workflows/pipelineTeste.yml
+++ b/.github/workflows/pipelineTeste.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkour@v2
+    - uses: actions/checkout@v2
       with:
         fetch-depth: 0
 
@@ -20,7 +20,7 @@ jobs:
       contents: read
       packages: write
     steps:
-      - uses: actions/checkour@v3
+      - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
           java-version: '11'
