--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -23,8 +23,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          java-version: '11'
-          distribution: 'adopt-openj9'
+          java-version: '17'
+          distribution: 'temurin'
           package: '*.jar'
       - name: Publish package
         run: mvn --batch-mode deploy
