--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -78,6 +78,18 @@ jobs:
         run: |
           sh 'src/main/scripts/smoketest.sh'
 
+  TesteIntegrado:
+    runs-on: ubuntu-latest
+    needs: Smoketest
+    
+    if: github.ref == 'refs/heads/develop'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+        shell: bash
+        run: |
+          sh 'src/main/scripts/testeIntegrado.sh'
+  
   deploy-Pre:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/release'
@@ -89,6 +101,29 @@ jobs:
         shell: bash
         run: |
           echo "Deploy PRE"
+
+  SmoketestPre:
+    runs-on: ubuntu-latest
+    needs: deploy-Pre
+    
+    if: github.ref == 'refs/heads/release'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+        shell: bash
+        run: |
+          sh 'src/main/scripts/smoketest.sh'
+  TesteFuncionais:
+    runs-on: ubuntu-latest
+    needs: SmoketestPre
+    
+    if: github.ref == 'refs/heads/release'
+    steps:
+      - uses: actions/checkout@v3
+      - name: Deploy 
+        shell: bash
+        run: |
+          sh 'src/main/scripts/testeFuncionais.sh'
 
   deploy-Prod:
     runs-on: ubuntu-latest
