--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -61,7 +61,7 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: unit-test
+    needs: code-analisys
     steps:
     - uses: actions/checkout@v2
       with:
